<resources>
    <string name="app_name">The Most Famous Word</string>
    <string name="score">0</string>
    <string name="titleScore">Top 10 High Score</string>
    <string name="footer">List of Score</string>
    <string name="level">Choose your Level</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="menu">Menu</string>
    <string name="save">Save</string>
    <string name="fieldNick">Enter username to save :</string>
    <string name="gameover">Game Over !</string>
    <string name="item1">Item1</string>
    <string name="item2">Item2</string>
    <string name="item3">Item3</string>
    <string name="item4">Item4</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>

    <string-array name="words">
        <item>OnePlus</item>
        <item>Asus</item>
        <item>Acer</item>
        <item>Honda</item>
        <item>Toyota</item>
        <item>Carrefour</item>
        <item>Ecole</item>
        <item>Gaumont</item>
        <item>Netflix</item>
        <item>Facebook</item>

        <item>Twitter</item>
        <item>Instagram</item>
        <item>Paris</item>
        <item>Barcelone</item>
        <item>Canada</item>
        <item>Coronavirus</item>
        <item>Efrei</item>
        <item>Epita</item>
        <item>Youtube</item>
        <item>Google</item>

        <item>Nike</item>
        <item>Adidas</item>
        <item>Kobe</item>
        <item>Football</item>
        <item>Coca</item>
        <item>Tacos</item>
        <item>Macdo</item>
        <item>KFC</item>
        <item>Iphone</item>
        <item>Xiaomi</item>

    </string-array>

    <string-array name="name">
        <item>OnePlus</item>
        <item>Asus</item>
        <item>Acer</item>
        <item>Honda</item>
        <item>Toyota</item>
        <item>Carrefour</item>
        <item>Ecole</item>
        <item>Pathé Gaumont</item>
        <item>Netflix</item>
        <item>Facebook</item>

    </string-array>

    <string-array name="score">
        <item>10</item>
        <item>10</item>
        <item>10</item>
        <item>8</item>
        <item>7</item>
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>

    </string-array>
</resources>
