<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EasyGame.Game_easy">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/blue">

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/darkblue"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="320dp">

            <Button
                android:id="@+id/item1"
                android:layout_width="120dp"
                android:layout_height="46dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="124dp"
                android:background="@drawable/rounded_btn_game"
                android:text="@string/item1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/item2"
                android:layout_width="120dp"
                android:layout_height="46dp"
                android:layout_marginStart="68dp"
                android:layout_marginTop="124dp"
                android:background="@drawable/rounded_btn_game"
                android:text="@string/item2"
                app:layout_constraintStart_toEndOf="@+id/item1"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="320dp">

            <Button
                android:id="@+id/item3"
                android:layout_width="120dp"
                android:layout_height="46dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="124dp"
                android:background="@drawable/rounded_btn_game"
                android:text="@string/item3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/item4"
                android:layout_width="120dp"
                android:layout_height="46dp"
                android:layout_marginStart="68dp"
                android:layout_marginTop="124dp"
                android:background="@drawable/rounded_btn_game"
                android:text="@string/item4"
                app:layout_constraintStart_toEndOf="@+id/item3"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>