<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="52sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/choose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:gravity="center"
            android:text="@string/level"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:layout_editor_absoluteX="0dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="516dp">

            <Button
                android:id="@+id/easy"
                android:layout_width="120dp"
                android:layout_height="46dp"
                android:layout_marginStart="144dp"
                android:layout_marginTop="80dp"
                android:background="@drawable/rounded_btn_yellow"
                android:text="@string/easy"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/medium"
                android:layout_width="120dp"
                android:layout_height="46dp"
                android:layout_marginStart="144dp"
                android:layout_marginTop="80dp"
                android:background="@drawable/rounded_btn_orange"
                android:text="@string/medium"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/easy" />

            <Button
                android:id="@+id/hard"
                android:layout_width="120dp"
                android:layout_height="46dp"
                android:layout_marginStart="144dp"
                android:layout_marginTop="80dp"
                android:background="@drawable/rounded_btn_red"
                android:text="@string/hard"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/medium" />

            <Button
                android:id="@+id/quit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="160dp"
                android:layout_marginTop="72dp"
                android:background="@drawable/rounded_btn_game"
                android:text="@string/quit"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hard" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>