<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game_easy">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/blue">

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/darkblue"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="256dp">

            <Button
                android:id="@+id/item1"
                android:layout_width="120dp"
                android:layout_height="46dp"
                android:layout_marginStart="144dp"
                android:layout_marginTop="104dp"
                android:background="@drawable/rounded_btn_game"
                android:text="@string/item1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textItem1"
                android:layout_width="113dp"
                android:layout_height="33dp"
                android:layout_marginStart="148dp"
                android:layout_marginBottom="16dp"
                android:text="@string/textview"
                app:layout_constraintBottom_toTopOf="@+id/item1"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imgResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:srcCompat="@tools:sample/avatars[0]"
            android:contentDescription="TODO" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="256dp">

            <Button
                android:id="@+id/item2"
                android:layout_width="120dp"
                android:layout_height="46dp"
                android:layout_marginStart="144dp"
                android:layout_marginTop="128dp"
                android:background="@drawable/rounded_btn_game"
                android:text="@string/item2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textItem2"
                android:layout_width="117dp"
                android:layout_height="33dp"
                android:layout_marginStart="144dp"
                android:layout_marginTop="16dp"
                android:text="@string/textview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item2" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>